# fast_n

./: .gitignore  LICENCE  README.md  __init__.py  pyproject.toml
src/fastn/: noise.py  utilities.py
src/fastpn/: noise.py
tests/: check_seed-determinism.py
